pxc/tests/test_113_expandrec/ecall.px
public namespace ecall;
import common -;
import meta m;

function {lst} expand foo
{
}

function int test1(int x)
{
  metafunction lst m::sort{m::list{1, 5, 23, 11, 4, 9, 16}};
  foo{lst}(); // error
  return 0;
  // expand foo{lst};
}

{
  for (int x : 0 .. 30) {
    println(test1(x));
  }
}

